// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Modal -  prop footerAlignment is an enum requires value 'centered' or 'right' 1`] = `
<React.Fragment>
  <section
    className="modal modal-undefined modal-undefined"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-container"
      >
        

        <i
          className="material-icons modal-close"
        >
          close
        </i>
        <div
          className="modal-body"
        />
      </div>
    </div>
  </section>
</React.Fragment>
`;

exports[`Component: Modal -  prop size is is an enum which requires value 'small', 'medium' or 'large' 1`] = `
<React.Fragment>
  <section
    className="modal modal-default modal-test"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-container"
      >
        

        <i
          className="material-icons modal-close"
        >
          close
        </i>
        <div
          className="modal-body"
        />
      </div>
    </div>
  </section>
</React.Fragment>
`;

exports[`Component: Modal -  prop size is marked as required 1`] = `
<React.Fragment>
  <section
    className="modal modal-default modal-undefined"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-container"
      >
        

        <i
          className="material-icons modal-close"
        >
          close
        </i>
        <div
          className="modal-body"
        />
      </div>
    </div>
  </section>
</React.Fragment>
`;

exports[`Component: Modal -  prop type is is an enum which requires value 'brand' or 'default' 1`] = `
<React.Fragment>
  <section
    className="modal modal-test modal-large"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-container"
      >
        

        <i
          className="material-icons modal-close"
        >
          close
        </i>
        <div
          className="modal-body"
        />
      </div>
    </div>
  </section>
</React.Fragment>
`;

exports[`Component: Modal -  prop type is marked as required 1`] = `
<React.Fragment>
  <section
    className="modal modal-undefined modal-large"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-container"
      >
        

        <i
          className="material-icons modal-close"
        >
          close
        </i>
        <div
          className="modal-body"
        />
      </div>
    </div>
  </section>
</React.Fragment>
`;

exports[`Component: Modal -  renders 1`] = `
<React.Fragment>
  <section
    className="modal modal-default modal-large"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-container"
      >
        

        <i
          className="material-icons modal-close"
        >
          close
        </i>
        <div
          className="modal-body"
        />
      </div>
    </div>
  </section>
</React.Fragment>
`;

exports[`Component: Modal -  renders a button component when prop button is true 1`] = `
<React.Fragment>
  <section
    className="modal modal-undefined modal-undefined"
    id="test"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-container"
      >
        

        <i
          className="material-icons modal-close"
        >
          close
        </i>
        <div
          className="modal-body"
        />
      </div>
    </div>
  </section>
  


  <OpenModalButton
    id="test"
  />
</React.Fragment>
`;

exports[`Component: Modal -  renders a footer when prop footerText is provided 1`] = `
<React.Fragment>
  <section
    className="modal modal-undefined modal-undefined"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-container"
      >
        

        <i
          className="material-icons modal-close"
        >
          close
        </i>
        <div
          className="modal-body"
        />
        <footer
          className=""
        >
          

          <button
            className="btn btn-default"
            type="button"
          >
            Close
          </button>
          

          <button
            className="btn btn-brand"
            type="submit"
          >
            Submit
          </button>
        </footer>
      </div>
    </div>
  </section>
</React.Fragment>
`;

exports[`Component: Modal -  renders a footer with alignment when prop footerText and footerAlignment is provided 1`] = `
<React.Fragment>
  <section
    className="modal modal-undefined modal-undefined"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-container"
      >
        

        <i
          className="material-icons modal-close"
        >
          close
        </i>
        <div
          className="modal-body"
        />
        <footer
          className="modal-footer-centered"
        >
          

          <button
            className="btn btn-default"
            type="button"
          >
            Close
          </button>
          

          <button
            className="btn btn-brand"
            type="submit"
          >
            Submit
          </button>
        </footer>
      </div>
    </div>
  </section>
</React.Fragment>
`;

exports[`Component: Modal -  renders a header tag with subtitle but without title when prop subTitle is provided but title is not 1`] = `
<React.Fragment>
  <section
    className="modal modal-undefined modal-undefined"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-container"
      >
        

        <i
          className="material-icons modal-close"
        >
          close
        </i>
        <ModalHeading
          subTitle="test"
        />
        <div
          className="modal-body"
        />
      </div>
    </div>
  </section>
</React.Fragment>
`;

exports[`Component: Modal -  renders with a header and subtitle when prop title and subTitle is provided 1`] = `
<React.Fragment>
  <section
    className="modal modal-undefined modal-undefined"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-container"
      >
        

        <i
          className="material-icons modal-close"
        >
          close
        </i>
        <ModalHeading
          subTitle="test"
          title="test"
        />
        <div
          className="modal-body"
        />
      </div>
    </div>
  </section>
</React.Fragment>
`;

exports[`Component: Modal -  renders with a header without subtitle when prop title is provided and prop subTitle is missing 1`] = `
<React.Fragment>
  <section
    className="modal modal-undefined modal-undefined"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-container"
      >
        

        <i
          className="material-icons modal-close"
        >
          close
        </i>
        <ModalHeading
          title="test"
        />
        <div
          className="modal-body"
        />
      </div>
    </div>
  </section>
</React.Fragment>
`;

exports[`Component: Modal -  renders with class 'fade' when prop fade is true 1`] = `
<React.Fragment>
  <section
    className="modal modal-undefined modal-undefined fade"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-container"
      >
        

        <i
          className="material-icons modal-close"
        >
          close
        </i>
        <div
          className="modal-body"
        />
      </div>
    </div>
  </section>
</React.Fragment>
`;

exports[`Component: Modal -  renders with class 'in' when prop visible is true 1`] = `
<React.Fragment>
  <section
    className="modal modal-undefined modal-undefined in"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-container"
      >
        

        <i
          className="material-icons modal-close"
        >
          close
        </i>
        <div
          className="modal-body"
        />
      </div>
    </div>
  </section>
</React.Fragment>
`;

exports[`Component: Modal -  renders with class 'static' when prop isStatic is true 1`] = `
<React.Fragment>
  <section
    className="modal modal-undefined modal-undefined static"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-container"
      >
        

        <i
          className="material-icons modal-close"
        >
          close
        </i>
        <div
          className="modal-body"
        />
      </div>
    </div>
  </section>
</React.Fragment>
`;

exports[`Component: Modal -  renders without header when prop title is missing 1`] = `
<React.Fragment>
  <section
    className="modal modal-undefined modal-undefined"
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-container"
      >
        

        <i
          className="material-icons modal-close"
        >
          close
        </i>
        <div
          className="modal-body"
        />
      </div>
    </div>
  </section>
</React.Fragment>
`;
